@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (future 6.0.3, SVN branch-6-0):
 ---------------------------
 
+- Fixed PHP MapScript opacity property of StyleObj no longer works (#3920)
+
 - Added MS_CJC_* constants in PHP/MapScript (#4183)
 
 - Fixed Memory leak with fribidi strings (#4188)
